--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#00FFFF</color>
+    <color name="colorPrimaryDark">#00FFFF</color>
+    <color name="colorAccent">#00FFFF</color>
+    <color name="colorAqua">#00FFFF</color>
+    <color name="colorAqua1">#BF00FFFF</color>
+    <color name="colorAqua2">#8000FFFF</color>
+    <color name="colorAqua3">#4000FFFF</color>
+    <color name="colorAqua4">#2600FFFF</color>
+    <color name="colorBlue">#0000FF</color>
+    <color name="colorBlue1">#BF0000FF</color>
+    <color name="colorBlue2">#800000FF</color>
+    <color name="colorLime">#00FF00</color>
+    <color name="colorLime1">#BF00FF00</color>
+    <color name="colorLime2">#8000FF00</color>
+    <color name="colorXanhNgoc">#00FF8B</color>
+    <color name="colorXanhNgoc1">#BF00FF8B</color>
+    <color name="colorXanhNgoc2">#8000FF8C</color>
+    <color name="colorSilver">#C0C0C0</color>
+    <color name="colorSilver1">#BFC0C0C0</color>
+    <color name="colorSilver2">#80C0C0C0</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGray">#808080</color>
+    <color name="colorRed">#FF0000</color>
+    <color name="colorYellow">#FFFF00</color>
+    <color name="colorGreen">#008000</color>
+    <color name="colorFuchsia">#FF00FF</color>
+    <color name="colorOrgan">#FFC300</color>
+
 </resources>
