Sửa thêm silver3

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="colorSilver">#C0C0C0</color>
     <color name="colorSilver1">#BFC0C0C0</color>
     <color name="colorSilver2">#80C0C0C0</color>
+    <color name="colorSilver3">#26BFBFBF</color>
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorGray">#808080</color>
