--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00FFFF</color>
+    <color name="colorPrimary">#00CCFF</color>
     <color name="colorPrimaryDark">#00FFFF</color>
     <color name="colorAccent">#00FFFF</color>
     <color name="colorAqua">#00FFFF</color>
