--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#00CCFF</color>
-    <color name="colorPrimaryDark">#00FFFF</color>
-    <color name="colorAccent">#00FFFF</color>
-    <color name="colorAqua">#00FFFF</color>
-    <color name="colorAqua1">#BF00FFFF</color>
-    <color name="colorAqua2">#8000FFFF</color>
-    <color name="colorAqua3">#4000FFFF</color>
-    <color name="colorAqua4">#2600FFFF</color>
+    <color name="colorPrimaryDark">#00CCFF</color>
+    <color name="colorAccent">#00CCFF</color>
+    <color name="colorMain">#00CCFF</color>
+    <color name="colorMain1">#BF00CCFF</color>
+    <color name="colorMain2">#8000CCFF</color>
+    <color name="colorStatusBar">#2600CCFF</color>
     <color name="colorBlue">#0000FF</color>
     <color name="colorBlue1">#BF0000FF</color>
     <color name="colorBlue2">#800000FF</color>
+    <color name="colorAqua">#00FFFF</color>
+    <color name="colorAqua1">#BF00FFFF</color>
+    <color name="colorAqua2">#8000FFFF</color>
     <color name="colorLime">#00FF00</color>
     <color name="colorLime1">#BF00FF00</color>
     <color name="colorLime2">#8000FF00</color>
