--- a/app/src/main/res/layout/activity_forgot.xml
+++ b/app/src/main/res/layout/activity_forgot.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
     android:background="@color/theme"
-    tools:context=".activity.RegisterActivity">
+    tools:context=".activity.ForgotActivity">
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -30,7 +30,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:fontFamily="sans-serif-medium"
-            android:text="Đăng ký"
+            android:text="Quên mật khẩu"
             android:textColor="@color/colorWhite"
             android:textSize="30sp" />
 
@@ -51,7 +51,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
-                    android:text="Tài khoản"
+                    android:text="Username"
                     android:textAllCaps="true"
                     android:textColor="@color/colorWhite"
                     android:textSize="15sp" />
@@ -66,9 +66,7 @@
                     android:paddingRight="15dp"
                     android:textColor="@color/colorWhite"
                     android:textSize="15sp"
-                    android:inputType="text"
-                    android:hint="Tài Khoản"
-                    android:textColorHint="@color/colorAqua"/>
+                    android:inputType="text"/>
 
             </LinearLayout>
 
@@ -82,7 +80,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
-                    android:text="Mật khẩu"
+                    android:text="Password"
                     android:textAllCaps="true"
                     android:textColor="@color/colorWhite"
                     android:textSize="15sp" />
@@ -97,9 +95,7 @@
                     android:paddingRight="15dp"
                     android:textColor="@color/colorWhite"
                     android:textSize="15sp"
-                    android:inputType="textPassword"
-                    android:hint="Mật Khẩu"
-                    android:textColorHint="@color/colorAqua"/>
+                    android:inputType="textPassword"/>
 
             </LinearLayout>
             <LinearLayout
@@ -127,9 +123,7 @@
                     android:paddingRight="15dp"
                     android:textColor="@color/colorWhite"
                     android:textSize="15sp"
-                    android:inputType="textPassword"
-                    android:hint="Nhập Lại Mật Khẩu"
-                    android:textColorHint="@color/colorAqua"/>
+                    android:inputType="textPassword"/>
 
             </LinearLayout>
             <LinearLayout
@@ -142,11 +136,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
-                    android:text="Só Điện Thoại"
+                    android:text="Phone Number"
                     android:textAllCaps="true"
                     android:textColor="@color/colorWhite"
-                    android:textSize="15sp"
-                    />
+                    android:textSize="15sp" />
 
                 <EditText
                     android:layout_width="match_parent"
@@ -158,9 +151,7 @@
                     android:paddingRight="15dp"
                     android:textColor="@color/colorWhite"
                     android:textSize="15sp"
-                    android:inputType="phone"
-                    android:hint="Số Điện Thoại"
-                    android:textColorHint="@color/colorAqua"/>
+                    android:inputType="phone"/>
 
             </LinearLayout>
 
@@ -177,7 +168,7 @@
             android:fontFamily="sans-serif-medium"
             android:paddingLeft="70dp"
             android:paddingRight="70dp"
-            android:text="Đăng Ký"
+            android:text="Register"
             android:textAllCaps="false"
             android:textColor="@color/colorWhite"
             android:textSize="16sp" />
@@ -192,7 +183,7 @@
             android:fontFamily="sans-serif-medium"
             android:paddingLeft="70dp"
             android:paddingRight="70dp"
-            android:text="Nhập Lại"
+            android:text="Reset"
             android:textAllCaps="false"
             android:textColor="@color/colorWhite"
             android:textSize="16sp" />
@@ -214,7 +205,7 @@
             android:layout_height="wrap_content"
             android:background="@color/transparent"
             android:fontFamily="sans-serif"
-            android:text="Trở lại"
+            android:text="BACK"
             android:textAllCaps="true"
             android:textColor="@color/colorWhite" />
 
@@ -224,7 +215,7 @@
             android:layout_alignParentRight="true"
             android:background="@color/transparent"
             android:fontFamily="sans-serif"
-            android:text="Quên Mật Khẩu?"
+            android:text="Forgot Password?"
             android:textAllCaps="true"
             android:textColor="@color/colorWhite" />
 
