Thay đổi giao diện, tạo thêm giao diện register, quên mk

--- a/app/src/main/res/layout/activity_forgot.xml
+++ b/app/src/main/res/layout/activity_forgot.xml
@@ -181,6 +181,7 @@
         >
 
         <Button
+            android:id="@+id/btback"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/transparent"
