--- a/app/src/main/res/layout/activity_forgot.xml
+++ b/app/src/main/res/layout/activity_forgot.xml
@@ -24,6 +24,7 @@
 
 
         <TextView
+            android:layout_toRightOf="@+id/imgView_logo"
             android:id="@+id/tv_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
