--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -36,6 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"
+                android:layout_toRightOf="@+id/imgView_logo"
                 android:fontFamily="sans-serif-medium"
                 android:text="Đăng ký"
                 android:textColor="@color/colorWhite"
