--- a/app/src/main/res/layout/fragment_store.xml
+++ b/app/src/main/res/layout/fragment_store.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@color/colorTheme4"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:gravity="center"
+    <LinearLayout
+        android:gravity="center_horizontal"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorTheme">
+        android:layout_height="100dp"
+        android:background="@drawable/custom_bg_title_cuahang">
 
         <TextView
+            android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -21,9 +22,10 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
-    </RelativeLayout>
+    </LinearLayout>
 
     <LinearLayout
+        android:layout_marginTop="50dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -35,4 +37,4 @@
             android:layout_height="match_parent"
             />
     </LinearLayout>
-</LinearLayout>
+</FrameLayout>
